--- a/eTools Ultimate/Views/Windows/MainWindow.xaml
+++ b/eTools Ultimate/Views/Windows/MainWindow.xaml
@@ -38,7 +38,10 @@
             Grid.Row="0"
             CloseWindowByDoubleClickOnIcon="True" Margin="35,0,0,-5">
             <ui:TitleBar.Icon>
-                <ui:ImageIcon Source="/Views/Windows/eToolsLogoIcon.png" Margin="0,0,0,0"/>
+                <ui:ImageIcon Source="pack://application:,,,/eTools Ultimate;component/Views/Windows/eToolsLogoIcon.png" 
+                              Width="18" Height="18" 
+                              Margin="0,0,0,0"
+                              RenderOptions.BitmapScalingMode="HighQuality" />
             </ui:TitleBar.Icon>
         </ui:TitleBar>
 
