--- a/eTools Ultimate/Views/Pages/Accessory/AccessoryPage.xaml
+++ b/eTools Ultimate/Views/Pages/Accessory/AccessoryPage.xaml
@@ -1,9 +1,10 @@
 <Page
-    x:Class="eTools_Ultimate.Views.Pages.AccessoryPage"
+    x:Class="eTools_Ultimate.Views.Pages.Accessory.AccessoryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
+    xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages.Accessory"
+    xmlns:models="clr-namespace:eTools_Ultimate.Models.Accessory"
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -20,7 +21,81 @@
 
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <local:EnglishNumberConverter x:Key="EnglishNumberConverter" />
+        
+        <!-- TextBox Style -->
+        <Style x:Key="AppTextBoxStyle" 
+               TargetType="TextBox" 
+               BasedOn="{StaticResource {x:Type TextBox}}">
+            <Setter Property="Background" 
+                    Value="{DynamicResource ControlFillColorDefaultBrush}"/>
+            <Setter Property="Foreground" 
+                    Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+            <Setter Property="BorderBrush" 
+                    Value="{DynamicResource ControlStrokeColorDefaultBrush}"/>
+            <Setter Property="Padding" 
+                    Value="8,5"/>
+        </Style>
+        
+        <!-- ComboBox Style -->
+        <Style x:Key="AppComboBoxStyle" 
+               TargetType="ComboBox" 
+               BasedOn="{StaticResource {x:Type ComboBox}}">
+            <Setter Property="Background" 
+                    Value="{DynamicResource ControlFillColorDefaultBrush}"/>
+            <Setter Property="Foreground" 
+                    Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+            <Setter Property="BorderBrush" 
+                    Value="{DynamicResource ControlStrokeColorDefaultBrush}"/>
+        </Style>
+        
+        <!-- Button Style -->
+        <Style x:Key="AppButtonStyle" 
+               TargetType="Button">
+            <Setter Property="Background" 
+                    Value="{DynamicResource ControlFillColorDefaultBrush}"/>
+            <Setter Property="Foreground" 
+                    Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+            <Setter Property="BorderBrush" 
+                    Value="{DynamicResource ControlStrokeColorDefaultBrush}"/>
+            <Setter Property="Padding" 
+                    Value="8,5"/>
+        </Style>
+        
+        <!-- ListView Style -->
+        <Style x:Key="AppListViewStyle" 
+               TargetType="ListView">
+            <Setter Property="Background" 
+                    Value="Transparent"/>
+            <Setter Property="BorderBrush" 
+                    Value="Transparent"/>
+            <Setter Property="BorderThickness" 
+                    Value="0"/>
+            <Setter Property="Foreground" 
+                    Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+        </Style>
+        
+        <!-- ListViewItem Style -->
+        <Style x:Key="AppListViewItemStyle" 
+               TargetType="ListViewItem">
+            <Setter Property="Background" 
+                    Value="Transparent"/>
+            <Setter Property="Foreground" 
+                    Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" 
+                         Value="True">
+                    <Setter Property="Background" 
+                            Value="{DynamicResource ControlFillColorSecondaryBrush}"/>
+                </Trigger>
+                <Trigger Property="IsSelected" 
+                         Value="True">
+                    <Setter Property="Background" 
+                            Value="{DynamicResource ControlFillColorDefaultBrush}"/>
+                    <Setter Property="Foreground" 
+                            Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Page.Resources>
 
     <Grid x:Name="RootGrid">
@@ -56,33 +131,16 @@
                     Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
                     Margin="5,5,15,5">
                 <ListView x:Name="AccessoriesListView"
+                          Style="{StaticResource AppListViewStyle}"
                           BorderThickness="0"
                           Background="Transparent"
                           SelectedIndex="0">
                     <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Background"
-                                    Value="Transparent"/>
-                            <Setter Property="BorderBrush"
-                                    Value="{DynamicResource ControlStrokeColorDefaultBrush}"/>
+                        <Style TargetType="ListViewItem" BasedOn="{StaticResource AppListViewItemStyle}">
                             <Setter Property="Padding" 
                                     Value="8,4" />
                             <Setter Property="Margin" 
                                     Value="0,1" />
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver"
-                                         Value="True">
-                                    <Setter Property="Background"
-                                            Value="{DynamicResource ControlFillColorSecondaryBrush}"/>
-                                </Trigger>
-                                <Trigger Property="IsSelected"
-                                         Value="True">
-                                    <Setter Property="Background"
-                                            Value="{DynamicResource ControlFillColorDefaultBrush}"/>
-                                    <Setter Property="Foreground"
-                                            Value="{DynamicResource TextFillColorPrimaryBrush}"/>
-                                </Trigger>
-                            </Style.Triggers>
                         </Style>
                     </ListView.ItemContainerStyle>
 
@@ -109,7 +167,8 @@
         <Border Grid.Column="2"
                 Padding="16"
                 Margin="5,5,5,5"
-                Background="{DynamicResource ControlFillColorDefaultBrush}"
+                BorderBrush="Transparent"
+                BorderThickness="0"
                 CornerRadius="8">
             <Grid>
                 <Grid.RowDefinitions>
@@ -125,8 +184,7 @@
                         FontWeight="Bold"
                         Text="II_GEN_JEW_RIN_STRRING" />
                     <TextBlock
-                        Text="Strength Ring - Increases character's strength"
-                        Foreground="{DynamicResource TextFillColorSecondaryBrush}" />
+                        Text="Strength Ring - Increases character's strength" />
                 </StackPanel>
 
                 <!-- Accessory Actions -->
@@ -136,11 +194,6 @@
                         Appearance="Secondary"
                         Icon="Add24"
                         Content="New Level" />
-                    <ui:Button
-                        Margin="0,0,8,0"
-                        Appearance="Secondary"
-                        Icon="Delete24"
-                        Content="Delete Level" />
                 </StackPanel>
 
                 <!-- Accessory Stats - Card View -->
@@ -150,9 +203,8 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Border 
-                                    Background="{DynamicResource ControlFillColorTertiaryBrush}"
-                                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
                                     BorderThickness="1"
+                                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                                     CornerRadius="6"
                                     Margin="0,0,0,12"
                                     Padding="16">
@@ -176,17 +228,20 @@
                                                 FontSize="18"
                                                 FontWeight="SemiBold"
                                                 VerticalAlignment="Center" />
-                                                
+                                                    
                                             <StackPanel Grid.Column="1" Orientation="Horizontal">
                                                 <!-- Delete with Confirmation -->
-                                                <Button
+                                                <ui:Button
                                                     Margin="4,0"
                                                     Padding="6,2"
                                                     ToolTip="Delete Level"
+                                                    Appearance="Danger"
                                                     Command="{Binding DataContext.DeleteWithConfirmationCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                     CommandParameter="{Binding}">
-                                                    <TextBlock Text="🗑️" FontSize="14" VerticalAlignment="Center"/>
-                                                </Button>
+                                                    <Grid>
+                                                        <ui:SymbolIcon Symbol="Delete24" />
+                                                    </Grid>
+                                                </ui:Button>
                                             </StackPanel>
                                         </Grid>
                                         
@@ -206,6 +261,7 @@
                                                             Grid.Column="0"
                                                             Margin="0,0,12,0"
                                                             FontSize="14"
+                                                            Style="{StaticResource AppComboBoxStyle}"
                                                             SelectedItem="{Binding AttributeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                             ItemsSource="{Binding DataContext.AttributeTypes, RelativeSource={RelativeSource AncestorType=Page}}" />
                                                         
@@ -220,18 +276,16 @@
                                                             <TextBox 
                                                                 Name="ValueTextBox"
                                                                 Grid.Column="0"
+                                                                Style="{StaticResource AppTextBoxStyle}"
                                                                 HorizontalContentAlignment="Right"
                                                                 VerticalContentAlignment="Center"
-                                                                Padding="8,5"
                                                                 FontSize="14"
                                                                 Text="{Binding FormattedValue, Mode=OneWay}"
-                                                                TextChanged="TextBox_TextChanged"
-                                                                BorderBrush="{DynamicResource ControlElevationBorderBrush}"
-                                                                BorderThickness="1">
+                                                                TextChanged="TextBox_TextChanged">
                                                                 <TextBox.InputBindings>
                                                                     <KeyBinding Key="Return" 
-                                                                              Command="{Binding DataContext.UpdateValueCommand, RelativeSource={RelativeSource AncestorType=Page}}"
-                                                                              CommandParameter="{Binding}"/>
+                                                                               Command="{Binding DataContext.UpdateValueCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                                                               CommandParameter="{Binding}"/>
                                                                 </TextBox.InputBindings>
                                                             </TextBox>
                                                             
@@ -242,8 +296,7 @@
                                                                     Height="16" 
                                                                     Padding="0" 
                                                                     Margin="0,0,0,1"
-                                                                    Background="{DynamicResource ControlFillColorDefaultBrush}"
-                                                                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                                                                    Style="{StaticResource AppButtonStyle}"
                                                                     BorderThickness="1"
                                                                     Command="{Binding DataContext.IncrementValueCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                                     CommandParameter="{Binding}"/>
@@ -252,8 +305,7 @@
                                                                     Height="16" 
                                                                     Padding="0" 
                                                                     Margin="0,1,0,0"
-                                                                    Background="{DynamicResource ControlFillColorDefaultBrush}"
-                                                                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                                                                    Style="{StaticResource AppButtonStyle}"
                                                                     BorderThickness="1"
                                                                     Command="{Binding DataContext.DecrementValueCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                                     CommandParameter="{Binding}"/>
@@ -264,6 +316,8 @@
                                                         <Button 
                                                             Grid.Column="2"
                                                             Padding="4"
+                                                            Style="{StaticResource AppButtonStyle}"
+                                                            BorderThickness="1"
                                                             Visibility="{Binding CanDelete, Converter={StaticResource BooleanToVisibilityConverter}}"
                                                             Command="{Binding DataContext.RemoveAttributeCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                                             CommandParameter="{Binding}">
@@ -278,6 +332,7 @@
                                         <Button 
                                             Grid.Row="2" 
                                             Margin="0,8,0,0"
+                                            Style="{StaticResource AppButtonStyle}"
                                             HorizontalAlignment="Left"
                                             Command="{Binding DataContext.AddAttributeCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                             CommandParameter="{Binding}">
@@ -295,4 +350,4 @@
             </Grid>
         </Border>
     </Grid>
-</Page> 
+</Page>
